--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   ],
   "author": "zhangyichi",
   "dependencies": {
+    "debug": "^2.2.0",
+    "flux-standard-action": "^0.6.0",
+    "invariant": "^2.1.1",
     "lodash": "^3.10.1"
   }
 }
